--- a/data_explore/data_explore.Rmd
+++ b/data_explore/data_explore.Rmd
@@ -192,7 +192,7 @@ bar_taxa2 <- ggplot(taxa_df_long2, aes(x = class, y = percent, fill = dataset)) 
   theme(panel.grid.major.x = element_blank()) +
   geom_bar(stat = 'identity', alpha = .8) +
 #  scale_fill_manual(values = c('AquaMaps' = 'red', 'Both' = 'mediumorchid', 'IUCN' = 'blue')) +
-  scale_fill_manual(values = c('AquaMaps' = '#1b9e77', 'Both' = '#d95f02', 'IUCN' = '#7570b3')) +
+  scale_fill_manual(values = c('AquaMaps' = '#1b9e77', 'Both' = '#d95f02', 'IUCN' = '#6f6ba0')) +
   geom_text(aes(label = sprintf('n = %s', n_total), y = 102), 
             size = 2, 
             angle = 90, hjust = 0, color = 'grey30') +
@@ -230,7 +230,7 @@ ggsave(filename = file.path(dir_fig, 'bar_by_taxa_all.png'),
 #        x = 'Class', 
 #        y = 'Percent of assessed mapped species')
 # print(bar_taxa3)
-# ggsave(filename = file.path(dir_fig, 'si_bar_by_taxa_assessed.png'), 
+# ggsave(filename = file.path(dir_fig, 'si_bar_by_taxa_assessed.tif'), device = 'tiff', 
 #        width = 17.8, height = 6, units = 'cm')
 
 ```
@@ -356,7 +356,8 @@ scatter_quadplot <- scatter_quadplot +
 
 # print(scatter_quadplot)
 
-ggsave(file.path(dir_fig, 'scatter_quadmap.png'), width = 17.8, height = 9, units = 'cm')
+ggsave(file.path(dir_fig, 'scatter_quadmap.png'),
+       width = 17.8, height = 9, units = 'cm')
 
 ```
 
@@ -538,6 +539,9 @@ barchart_spp_risk_quads <- ggplot(spp_risk_quadrants1 %>%
        fill = 'Alignment')
 
 # print(barchart_spp_risk_quads)
+ggsave(plot = barchart_spp_risk_quads,
+       filename = file.path(dir_fig, 'si_barchart_spp_risk_quads.tif'), device = 'tiff',
+       width = 17.8, height = 4.5, units = 'cm')
 ggsave(plot = barchart_spp_risk_quads,
        filename = file.path(dir_fig, 'si_barchart_spp_risk_quads.png'),
        width = 17.8, height = 4.5, units = 'cm')
