--- a/ms_1_abst_sig.Rmd
+++ b/ms_1_abst_sig.Rmd
@@ -3,20 +3,10 @@
 
 _Abstract. Provide an abstract of no more than 250 words on page 2 of the manuscript. Abstracts should explain to the general reader the major contributions of the article. References in the abstract must be cited in full within the abstract itself and cited in the text._
 
-Species distribution data provide the foundation for a wide range of ecological research studies and conservation management decisions, yet most species ranges remain unknown, and existing range maps often suffer from data limitations and show inconsistencies.  AquaMaps and the International Union for Conservation of Nature (IUCN) are two distinct efforts to map marine species distributions at a global scale.  Together these databases represent `r format(n_spp_all, big.mark = ',')` species (`r format(p_spp_am, big.mark = ',')`% within AquaMaps, `r format(p_spp_iucn, big.mark = ',')`% within IUCN), with only `r format(n_spp_both, big.mark = ',')` shared species.  Here we examine differences in predicted species ranges between the two datasets and find that these misalignments mainly result from divergent methodologies that introduce differing frequencies of commission and omission errors.  We illustrate the scientific and management implications of these differences by repeating two recent applications - an assessment of global biodiversity within the Ocean Health Index and a global analysis of gaps in coverage of marine protected areas - and find significantly different results depending on how the two datasets were used.  Until a single, highly accurate dataset of global marine species ranges becomes available, understanding the implications of dataset differences for conservation planning and decision-making is essential.
-
-<!--Understanding these issues points toward solutions for providers and users of these datasets.-->
-
-(184 words; 1307 char with spaces)
-
------
+Species distribution data provide the foundation for a wide range of ecological research studies and conservation management decisions, yet most species ranges remain unknown, and existing range maps often suffer from data limitations and inconsistencies.  AquaMaps and the International Union for Conservation of Nature (IUCN) are two distinct efforts to map marine species distributions at a global scale.  Together these databases represent `r format(n_spp_all, big.mark = ',')` species (`r format(p_spp_am, big.mark = ',')`% within AquaMaps, `r format(p_spp_iucn, big.mark = ',')`% within IUCN), with only `r format(n_spp_both, big.mark = ',')` shared species.  Here we examine differences in predicted species ranges between the two datasets and find that these misalignments mainly result from divergent methodologies that introduce differing frequencies of commission and omission errors.  We illustrate the scientific and management implications of these differences by repeating two recent applications - an assessment of global biodiversity within the Ocean Health Index and a global analysis of gaps in coverage of marine protected areas - and find significantly different results depending on how the two datasets were used.  Until a single, highly accurate dataset of global marine species ranges becomes available, understanding the implications of dataset differences for conservation planning and decision-making remains essential.
 
 ## Significance
 
 _Significance Statement. Authors must submit a 120-word-maximum statement about the significance of their research paper written at a level understandable to an undergraduate-educated scientist outside their field of specialty. The primary goal of the Significance Statement is to explain the relevance of the work in broad context to a broad readership. The Significance Statement appears in the paper itself and is required for all research papers._
 
-- ocean ecosystems provide broad benefits to humans, but are under pressure from human activity and climate change; ensuring sustainability of benefits depends on effective management and protection of resources.
-- Effective management and protection of our ocean ecosystems depends on understanding how species are distributed globally.  
-- Two key datasets of marine species ranges communicate an understanding of the global distribution of marine species - and are commonly used to inform management and protection research and policy.
-- substantial differences highlight important gaps in understanding (or communicating) species ranges, leading to ineffective management and protection.
-- identifying these differences points to solutions to address them and improve understanding.
+Successful conservation of marine species critically depends on detailed and accurate understanding of where species exist and where they do not. By systematically comparing two widely used global datasets of marine species range maps, we find substantial differences that highlight inconsistencies in our understanding and communication of species ranges. Knowing where and why these inconsistencies occur will substantially improve our ability to develop effective and efficient conservation strategies that support resilient ocean ecosystems.
